API ChangeLog 


* Release 1.6.1 *

01-Jan-2010	Troy A. Griffitts <scribe@crosswire.org>
	Added locales.d/locales.conf - a special locale which
		can be queried for localize and English lang names
	New supported v11n systems: german kjva leningrad luther
		mt nrsva nrsv synodal vulg <chrislit@crosswire.org>

02-Dec-2009	Troy A. Griffitts <scribe@crosswire.org>
	Updated installmgr util to allow multiple
		commands and update dl progress
	Added progress reporting to FtpLib transport
	Added ability to cancel during file transport,
		per Eeli's suggestion
	Increased clucene buffer size - mwtalbert
	On clucene index creation, error out on no
		write perms - mwtalbert

12-Oct-2009	Troy A. Griffitts <scribe@crosswire.org>
	Added initial impl for CurlHTTPTransport submitted
		by Nic Carter <niccarter@mac.com>
	Added initial Android ifdefs to get things compiling
		under the Android NDK
	Added bindings/java-jni for Android development

09-Aug-2009	Troy A. Griffitts <scribe@crosswire.org>
	Added checks for Hebrew and Arabic when stripping
		for searching


* Release 1.6.0 *

14-May-2009	Troy A. Griffitts <scribe@crosswire.org>
	General cleanup and prep for release

04-May-2009	Troy A. Griffitts <scribe@crosswire.org>
	Added ability for (SWBuf("xxx") == (const char *)0) to
		return false;
	Added OSIS Header logic to accept:
		<div subType="x-preverse" sID="xyz"/>
	Added initial set of v11n schemes (Chris Little):
		KJV, Leningrad, MT, KJVA, NRSV, NRSVA
	
12-Apr-2009	Troy A. Griffitts <scribe@crosswire.org>
	Added '.' feature for entryAttrib search, e.g,
		Word//Lemma./G932/ will find in Lemma, Lemma.1, etc.
	Added LocalePath feature in sword.conf

06-Apr-2009	Joachim A. <jansorg@crosswire.org>
	Added Maltese bookname translation prepared by C. S.

30-Mar-2009	Ben Morgan
	Added new methods to SWModule:
		bool isLinked(SWKey *k1, SWKey *k2)
			- are two entries linked
		bool hasEntry(SWKey *k1)
			- does an entry for the given key exist?
	Added new methods to SWLD: